Im Pushing HTML

--- a/html_1/style.css
+++ b/html_1/style.css
@@ -52,5 +52,15 @@ a  {
 
 }
 img {
-    width: 300px;
+    width: 150px;
 }
+
+h1 {
+
+font-family: sans-serif;
+
+}
+ .img2 {
+    width : 400px
+
+ }
