--- a/html_1/style.css
+++ b/html_1/style.css
@@ -16,6 +16,14 @@ h1 {
     margin: 15px;
     background-color: black;
 }
+.clearReviews{
+    background-color: darkorange;
+    width : 140px;
+    border-radius: 15%;
+
+
+
+}
 .dropDown-stuff { 
 
 display: none;
@@ -100,3 +108,32 @@ button {
 .user-message {
     color: blue;
 }
+.typing-indicator {
+    display: flex;
+    padding: 15px;
+  }
+  
+  .typing-indicator span {
+    height: 10px;
+    width: 10px;
+    background-color: #4285f4;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 0 2px;
+    animation: bounce 1.5s infinite ease-in-out;
+  }
+  
+  .typing-indicator span:nth-child(1) {
+    animation-delay: 0s;
+  }
+  .typing-indicator span:nth-child(2) {
+    animation-delay: 0.2s;
+  }
+  .typing-indicator span:nth-child(3) {
+    animation-delay: 0.4s;
+  }
+  
+  @keyframes bounce {
+    0%, 80%, 100% { transform: translateY(0); }
+    40% { transform: translateY(-10px); }
+  }
